--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ parso==0.7.0
 pdoc3==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==6.0.0
+Pillow>=6.2.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 protobuf==3.12.2
